--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -13,9 +13,10 @@ play.assets {
 # Default Postgres database configuration
 slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost/shopping"
-slick.dbs.default.db.user="postgres"
-slick.dbs.default.db.password="root"
+slick.dbs.default.db.url="jdbc:postgresql://localhost/shopping?user=postgres&password=root"
+slick.dbs.default.db.url=${?JDBC_DATABASE_URL}
+# slick.dbs.default.db.user="postgres"
+# slick.dbs.default.db.password="root"
 
 play.evolutions.enabled=true
 play.evolutions.db.default.autoApply=true
