--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -13,10 +13,28 @@ play.assets {
 # Default Postgres database configuration
 slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost/shopping?user=postgres&password=password"
+slick.dbs.default.db.url="jdbc:postgresql://localhost/shopping?user=postgres&password=root"
 slick.dbs.default.db.url=${?JDBC_DATABASE_URL}
 # slick.dbs.default.db.user="postgres"
 # slick.dbs.default.db.password="root"
 
 play.evolutions.enabled=true
 play.evolutions.db.default.autoApply=true
+
+play.modules.enabled += "play.modules.swagger.SwaggerModule"
+
+play.filters.hosts {
+# Allow requests from heroku and the temporary doman and localhost:9000
+allowed = ["shopping-scala-tuts.herokuapp.com", "localhost:9000"]
+}
+
+play.filters.csp.CSPFilter = "default-src * 'self' 'unsafe-inline' data:"
+
+# Disable CSRF
+play.filters.disabled += play.filters.csrf.CSRFFilter
+
+api.version = "1.0.0"
+swagger.api.info = {
+description: "API for the online shopping example",
+title: "Online Shopping"
+}
