--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -5,18 +5,12 @@ play.assets {
   urlPrefix = "/assets"
 }
 
-# # Default H2 database configuration
-# slick.dbs.default.profile="slick.jdbc.H2Profile$"
-# slick.dbs.default.db.driver="org.h2.Driver"
-# slick.dbs.default.db.url="jdbc:h2:mem:shopping"
-
 # Default Postgres database configuration
 slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost/shopping?user=postgres&password=password"
+slick.dbs.default.db.url="jdbc:postgresql://localhost/shopping?user=postgres&password=root"
 slick.dbs.default.db.url=${?JDBC_DATABASE_URL}
-# slick.dbs.default.db.user="postgres"
-# slick.dbs.default.db.password="root"
+
 
 play.evolutions.enabled=true
 play.evolutions.db.default.autoApply=true
@@ -25,13 +19,31 @@ play.modules.enabled += "play.modules.swagger.SwaggerModule"
 
 play.filters.hosts {
 # Allow requests from heroku and the temporary doman and localhost:9000
-allowed = ["shopping-scala-tuts.herokuapp.com", "localhost:9000"]
+allowed = ["shopping-scala-tuts.herokuapp.com", "localhost"]
 }
 
 play.filters.csp.CSPFilter = "default-src * 'self' 'unsafe-inline' data:"
 
+play.filters {
+  cors {
+    # Filter paths by a whitelist of path prefixes
+    pathPrefixes = ["/"]
+
+    # The allowed origins. If null, all origins are allowed.
+    allowedOrigins = null
+
+    # The allowed HTTP methods. If null, all methods are allowed
+    allowedHttpMethods = null
+
+    preflightMaxAge = 3 days
+  }
+}
+
 # Disable CSRF
 play.filters.disabled += play.filters.csrf.CSRFFilter
+
+#Remove all the security filter
+play.http.filters = play.api.http.NoHttpFilters
 
 api.version = "1.0.0"
 swagger.api.info = {
